code/kubernetes/istio/istio-ingressgateway/gateway-prod.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "cowing.co.kr"
        - "*.cowing.co.kr"
    - port:
        number: 80
        name: websocket
        protocol: HTTP
      hosts:
        - "ws.cowing.co.kr"
